--- a/module_device/src/main/res/layout/activity_device.xml
+++ b/module_device/src/main/res/layout/activity_device.xml
@@ -3,4 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.blackview.module_device.DeviceFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
