--- a/app/src/main/res/layout/activity_reset_pwd.xml
+++ b/app/src/main/res/layout/activity_reset_pwd.xml
@@ -133,6 +133,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/v_reset_line31"
-        app:rl_backgroundColor="@color/gray_B5B5B6"
+        app:rl_backgroundColor="@color/grey_4F4C4B"
         app:rl_radius="30dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
