--- a/module_device/src/main/res/layout/activity_add.xml
+++ b/module_device/src/main/res/layout/activity_add.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_1"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="center"
@@ -33,6 +34,7 @@
             android:background="@color/gray_E5E5E5" />
 
         <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_2"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="center"
@@ -49,6 +51,7 @@
             android:background="@color/gray_E5E5E5" />
 
         <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_3"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="center"
@@ -65,6 +68,7 @@
             android:background="@color/gray_E5E5E5" />
 
         <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_4"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="center"
