--- a/module_vip/src/main/res/layout/activity_vip.xml
+++ b/module_vip/src/main/res/layout/activity_vip.xml
@@ -6,13 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".VipActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        android:id="@+id/fragmentVip"
+        android:name="com.blackview.module_vip.VipFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
