--- a/module_device/src/main/res/layout/item_add_right.xml
+++ b/module_device/src/main/res/layout/item_add_right.xml
@@ -9,11 +9,12 @@
         android:layout_width="88dp"
         android:layout_height="88dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/image_arpha_logo_1"
+        android:src="@drawable/image_home_80"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
+        android:id="@+id/tv_right_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
