--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:textSize="10dp" />
 
             <RadioButton
-                android:id="@+id/main_map"
+                android:id="@+id/main_notice"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -57,7 +57,7 @@
 
 
             <RadioButton
-                android:id="@+id/main_chart"
+                android:id="@+id/main_me"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
