--- a/common/common-base/src/main/res/layout/layout_title.xml
+++ b/common/common-base/src/main/res/layout/layout_title.xml
@@ -8,13 +8,11 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="wrap_content"
-        android:layout_height="10dp"
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:paddingLeft="12dp"
-        android:paddingRight="30dp"
-        android:src="@drawable/icon_back"
-        android:visibility="visible" />
+        android:layout_marginStart="16dp"
+        android:src="@drawable/back_arrow_icon" />
 
 
     <TextView
@@ -24,8 +22,8 @@
         android:layout_centerInParent="true"
         android:ellipsize="end"
         android:maxLength="20"
-        android:textColor="#001129"
-        android:textSize="15sp" />
+        android:textColor="@color/black_333333"
+        android:textSize="14dp" />
 
 
     <TextView
