--- a/module_device/src/main/res/layout/activity_add.xml
+++ b/module_device/src/main/res/layout/activity_add.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_add_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,14 +24,21 @@
             android:text="1"
             android:textColor="@color/white"
             android:textSize="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:rl_backgroundColor="@color/gray_979797"
             app:rl_radius="60dp" />
 
+
         <View
+            android:id="@+id/v_steps_1"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"
-            android:background="@color/gray_E5E5E5" />
+            android:background="@color/gray_E5E5E5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_steps_1"
+            app:layout_constraintRight_toLeftOf="@+id/tv_steps_2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.caldremch.widget.round.RoundTextView
             android:id="@+id/tv_steps_2"
@@ -41,14 +48,21 @@
             android:text="2"
             android:textColor="@color/white"
             android:textSize="10dp"
+            app:layout_constraintLeft_toRightOf="@+id/v_steps_1"
+            app:layout_constraintRight_toLeftOf="@+id/v_steps_2"
+            app:layout_constraintTop_toTopOf="parent"
             app:rl_backgroundColor="@color/gray_e2e2e2"
             app:rl_radius="60dp" />
 
         <View
+            android:id="@+id/v_steps_2"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"
-            android:background="@color/gray_E5E5E5" />
+            android:background="@color/gray_E5E5E5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_steps_2"
+            app:layout_constraintRight_toLeftOf="@+id/tv_steps_3"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.caldremch.widget.round.RoundTextView
             android:id="@+id/tv_steps_3"
@@ -58,14 +72,22 @@
             android:text="3"
             android:textColor="@color/white"
             android:textSize="10dp"
+            app:layout_constraintLeft_toRightOf="@+id/v_steps_2"
+            app:layout_constraintRight_toLeftOf="@+id/v_steps_3"
+            app:layout_constraintTop_toTopOf="parent"
             app:rl_backgroundColor="@color/gray_e2e2e2"
             app:rl_radius="60dp" />
 
+
         <View
+            android:id="@+id/v_steps_3"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"
-            android:background="@color/gray_E5E5E5" />
+            android:background="@color/gray_E5E5E5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_steps_3"
+            app:layout_constraintRight_toLeftOf="@+id/tv_steps_4"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.caldremch.widget.round.RoundTextView
             android:id="@+id/tv_steps_4"
@@ -75,9 +97,69 @@
             android:text="4"
             android:textColor="@color/white"
             android:textSize="10dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:rl_backgroundColor="@color/gray_e2e2e2"
             app:rl_radius="60dp" />
-    </LinearLayout>
+
+        <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_11"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:rl_backgroundColor="@color/gray_e2e2e2"
+            app:rl_radius="60dp" />
+
+        <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_22"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:text="2"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:visibility="gone"
+            app:layout_constraintLeft_toRightOf="@+id/v_steps_1"
+            app:layout_constraintRight_toLeftOf="@+id/v_steps_2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:rl_backgroundColor="@color/gray_979797"
+            app:rl_radius="60dp" />
+
+        <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_33"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:text="3"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:visibility="gone"
+            app:layout_constraintLeft_toRightOf="@+id/v_steps_2"
+            app:layout_constraintRight_toLeftOf="@+id/v_steps_3"
+            app:layout_constraintTop_toTopOf="parent"
+            app:rl_backgroundColor="@color/gray_979797"
+            app:rl_radius="60dp" />
+
+        <com.caldremch.widget.round.RoundTextView
+            android:id="@+id/tv_steps_44"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:text="4"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:rl_backgroundColor="@color/gray_979797"
+            app:rl_radius="60dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/tv_add_select_name"
