完善装置共享页面，实现获取用户设备和他人分享给用户的设备接口

--- a/common/common-res/src/main/res/values/colors.xml
+++ b/common/common-res/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="gray_F8F8F8">#F8F8F8</color>
     <color name="gray_E5E5E5">#E5E5E5</color>
     <color name="gray_e2e2e2">#e2e2e2</color>
-    
+    <color name="gray_868686">#868686</color>
 
     <color name="line_color">#ffececec</color>
 </resources>
