--- a/common/common-res/src/main/res/values/colors.xml
+++ b/common/common-res/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="gray_868686">#868686</color>
 
     <color name="line_color">#ffececec</color>
+    <color name="line_yellow">#C9A063</color>
 </resources>
