--- a/module_vip/src/main/res/layout/activity_vip_device.xml
+++ b/module_vip/src/main/res/layout/activity_vip_device.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -59,47 +59,48 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/navigationBar" />
     <LinearLayout
         android:id="@+id/llEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/navigationBar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
+        android:visibility="gone"
         >
+
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/image_home_80"
             android:layout_gravity="center_horizontal"
-            />
+            android:src="@drawable/image_home_80" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nothing_device_tips"
-            android:gravity="center_horizontal"
-            android:textSize="14sp"
-            android:textColor="@color/black_333333"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="13dp"
-            />
+            android:gravity="center_horizontal"
+            android:text="@string/nothing_device_tips"
+            android:textColor="@color/black_333333"
+            android:textSize="14sp" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btAddDevice"
             android:layout_width="148dp"
             android:layout_height="36dp"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:text="@string/add_device"
-            android:background="@drawable/gray_button_bg_shape"
-            android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="24dp"
-            />
-
-
+            android:background="@drawable/gray_button_bg_shape"
+            android:gravity="center"
+            android:text="@string/add_device"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
     </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
