--- a/common/common-res/src/main/res/values/colors.xml
+++ b/common/common-res/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="gray_E5E5E5">#E5E5E5</color>
     <color name="gray_e2e2e2">#e2e2e2</color>
     <color name="gray_868686">#868686</color>
+    <color name="red_E3243B">#E3243B</color>
+    
 
     <color name="line_color">#ffececec</color>
     <color name="line_yellow">#C9A063</color>
