--- a/module_device/src/main/res/layout/fragment_add_three.xml
+++ b/module_device/src/main/res/layout/fragment_add_three.xml
@@ -6,6 +6,17 @@
     android:paddingTop="20dp">
 
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="paring_loading.json"
+        app:lottie_loop="true" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -26,5 +37,5 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-        
+
 </androidx.constraintlayout.widget.ConstraintLayout>
