--- a/module_device/src/main/res/layout/fragment_device.xml
+++ b/module_device/src/main/res/layout/fragment_device.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_E5E5E5">
@@ -53,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_title" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_title"
+        tools:listitem="@layout/item_devices" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
