实现装置共享整体的UI效果和功能以及接口业务（获取装置共享者列表、将设备分享给朋友们辑）

--- a/module_vip/src/main/res/layout/dialog_share_device.xml
+++ b/module_vip/src/main/res/layout/dialog_share_device.xml
@@ -66,10 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line1"
-        android:layout_marginTop="20dp"
-        android:minHeight="100dp"
         android:maxHeight="250dp"
-        />
+        android:minHeight="100dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btCancel"
