--- a/module_device/src/main/res/layout/dialog_device_notice_device.xml
+++ b/module_device/src/main/res/layout/dialog_device_notice_device.xml
@@ -32,9 +32,8 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/layout_switch"
         android:layout_width="wrap_content"
-        android:layout_height="390dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_del_dialog_title">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|top|right"
             android:orientation="vertical">
@@ -52,27 +51,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="@string/notice_switch1"
+                android:text="@string/notice1"
                 app:switchMinWidth="52dp"
-                app:switchPadding="100dp" />
+                app:switchPadding="150dp" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/notice_switch2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="@string/notice_switch2"
-                app:switchMinWidth="52dp"
-                app:switchPadding="100dp" />
+                android:text="@string/notice2"
+                app:switchMinWidth="52dp" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/notice_switch3"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="@string/notice_switch3"
-                app:switchMinWidth="52dp"
-                app:switchPadding="100dp" />
+                android:text="@string/notice3"
+                app:switchMinWidth="52dp" />
 
 
             <androidx.appcompat.widget.SwitchCompat
@@ -81,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch4"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -90,6 +88,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch5"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -99,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch6"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -108,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch7"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -117,6 +118,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch8"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -126,6 +128,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch9"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -135,6 +138,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch10"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -144,6 +148,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch11"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -153,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch12"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -162,6 +168,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch13"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
@@ -171,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/notice_switch14"
+                android:visibility="gone"
                 app:switchMinWidth="52dp"
                 app:switchPadding="100dp" />
 
