1、实现通知设定中的UI代码和业务逻辑

--- a/module_vip/src/main/res/layout/dialog_tips.xml
+++ b/module_vip/src/main/res/layout/dialog_tips.xml
@@ -6,6 +6,7 @@
     android:background="@drawable/vip_card_shape">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
