--- a/common/common-res/src/main/res/values/colors.xml
+++ b/common/common-res/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_0A84FF">#0A84FF</color>
     
     <color name="black_4F4C4B">#4F4C4B</color>
     <color name="black_333333">#333333</color>
@@ -23,7 +24,7 @@
     <color name="gray_e2e2e2">#e2e2e2</color>
     <color name="gray_868686">#868686</color>
     <color name="red_E3243B">#E3243B</color>
-    
+    <color name="gray_5C3C3C43">#5C3C3C43</color>
 
     <color name="line_color">#ffececec</color>
     <color name="line_yellow">#C9A063</color>
