--- a/module_device/src/main/res/layout/dialog_device_info_device.xml
+++ b/module_device/src/main/res/layout/dialog_device_info_device.xml
@@ -23,9 +23,9 @@
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
         android:background="@color/text_BC9E70"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_del_dialog_title"
-        app:layout_constraintRight_toRightOf="@+id/tv_del_dialog_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_del_dialog_title" />
+        app:layout_constraintLeft_toLeftOf="@+id/tv_info_dialog_title"
+        app:layout_constraintRight_toRightOf="@+id/tv_info_dialog_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_info_dialog_title" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
