--- a/module_vip/src/main/res/layout/fragment_head.xml
+++ b/module_vip/src/main/res/layout/fragment_head.xml
@@ -1,6 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/please_update_head_image"
+        android:textSize="14dp"
+        android:textColor="@color/black_333333"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        />
+    <com.caldremch.widget.round.RoundRelativeLayout
+        android:id="@+id/btAddImage"
+        android:layout_width="148dp"
+        android:layout_height="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
+        app:rl_backgroundColor="@color/grey_4F4C4B"
+        app:rl_radius="20dp"
+        >
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:drawableStart="@drawable/icon_camera_20"
+            android:text="@string/add_head_image"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginStart="30dp"
+            android:drawablePadding="10dp"
+            />
+
+    </com.caldremch.widget.round.RoundRelativeLayout>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/btAddImage"
+        android:layout_marginTop="40dp"
+        android:text="@string/current_head_tips"
+        android:textSize="14dp"
+        android:textColor="@color/black_333333"
+        android:textStyle="bold"
+        />
+    <ImageView
+        android:id="@+id/ivHeadImage"
+        android:layout_width="272dp"
+        android:layout_height="272dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/empty_head"
+        android:scaleType="centerCrop"
+        />
+
+    <com.caldremch.widget.round.RoundButton
+        android:id="@+id/btSave"
+        android:layout_width="148dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        app:rl_radius="20dp"
+        app:rl_backgroundColor="@color/gray_B5B5B6"
+        android:text="@string/common_save"
+        android:gravity="center"
+        android:textSize="14dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
