--- a/module_vip/src/main/res/layout/fragment_modify_nick.xml
+++ b/module_vip/src/main/res/layout/fragment_modify_nick.xml
@@ -1,6 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.appcompat.widget.AppCompatTextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
+        android:text="@string/current_nick"
+        android:textColor="@color/black_333333"
+        android:textStyle="bold"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        />
+    
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvCurrentNick"
+        android:layout_width="match_parent"
+        android:layout_height="27dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp"
+        android:text="Sandy wang"
+        android:textColor="@color/black_333333"
+        android:textSize="14dp"
+        android:gravity="center_vertical"
+        />
+    <View
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_e2e2e2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrentNick"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="3dp"
+        />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/line1"
+        android:layout_marginTop="40dp"
+        android:text="@string/new_nick"
+        android:textSize="14dp"
+        android:textColor="@color/black_333333"
+        android:textStyle="bold"
+        />
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/etNickName"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"
+        android:hint="@string/please_enter_nick"
+        android:textSize="14dp"
+        android:textColor="@color/black_333333"
+        android:textColorHint="@color/gray_979797"
+        />
+    <View
+        android:id="@+id/line2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_e2e2e2"
+        app:layout_constraintTop_toBottomOf="@id/etNickName"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        />
+
+
+    <com.caldremch.widget.round.RoundButton
+        android:id="@+id/btSave"
+        android:layout_width="148dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line2"
+        android:layout_marginTop="72dp"
+        android:text="@string/common_save"
+        android:gravity="center"
+        android:textSize="14dp"
+        android:textColor="@color/white"
+        app:rl_radius="20dp"
+        app:rl_backgroundColor="@color/gray_B5B5B6"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
