新建密码更改页面，实现相关业务逻辑

--- a/module_vip/src/main/res/navigation/nav_graph_account.xml
+++ b/module_vip/src/main/res/navigation/nav_graph_account.xml
@@ -27,6 +27,14 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             />
+        <action
+            android:id="@+id/action_accountFragment_to_passwordFragment"
+            app:destination="@id/passwordFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            />
     </fragment>
     <fragment
         android:id="@+id/modifyNickFragment"
@@ -39,5 +47,11 @@
         android:name="com.blackview.module_vip.account.fragment.HeadFragment"
         android:label="HeadFragment"
         tools:layout="@layout/fragment_head"
+        />
+    <fragment
+        android:id="@+id/passwordFragment"
+        android:name="com.blackview.module_vip.account.fragment.PasswordFragment"
+        android:label="PasswordFragment"
+        tools:layout="@layout/fragment_password"
         />
 </navigation>
