新建账号删除界面

--- a/module_vip/src/main/res/navigation/nav_graph_account.xml
+++ b/module_vip/src/main/res/navigation/nav_graph_account.xml
@@ -35,6 +35,13 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             />
+        <action
+            android:id="@+id/action_accountFragment_to_deleteAccFragment"
+            app:destination="@id/deleteAccFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/modifyNickFragment"
@@ -53,5 +60,11 @@
         android:name="com.blackview.module_vip.account.fragment.PasswordFragment"
         android:label="PasswordFragment"
         tools:layout="@layout/fragment_password"
+        />
+    <fragment
+        android:id="@+id/deleteAccFragment"
+        android:name="com.blackview.module_vip.account.fragment.DeleteAccFragment"
+        android:label="DeleteAccFragment"
+        tools:layout="@layout/fragment_delete_account"
         />
 </navigation>
