--- a/common/common-res/src/main/res/values/colors.xml
+++ b/common/common-res/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="gray_868686">#868686</color>
     <color name="red_E3243B">#E3243B</color>
     <color name="gray_5C3C3C43">#5C3C3C43</color>
+    <color name="gray_A7A9AC">#A7A9AC</color>
 
     <color name="line_color">#ffececec</color>
     <color name="line_yellow">#C9A063</color>
